fix after cargo publish

--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="eq_duck.png" alt="EQ Logo" class="site-logo">
+            <img src="eq_duck.png" alt="EQ Logo" class="site-logo" style="width: 80px; height: auto;">
             <h1>eq</h1>
             <p class="tagline">A terminal-based task manager for high-performance prioritization.</p>
             <div class="actions">
