--- a/site/index.html
+++ b/site/index.html
@@ -88,7 +88,7 @@
                         <div class="dot green"></div>
                     </div>
                     <div class="terminal-content">
-                        <span class="prompt">$</span> cargo install --path .
+                        <span class="prompt">$</span> cargo install eq
                     </div>
                 </div>
             </section>
